<resources>

    <string name="app_name">GeekTech</string>

    <!--Navigation-->
    <string name="title_events">События</string>
    <string name="title_chat">Чат</string>
    <string name="title_profile">Профиль</string>

    <!--IntroFragment-->
    <string name="text_about_geektech">
        О нас) Мы первая школа программирования с эффективным методом обучения. Обучаем разработке мобильных приложений Android &amp; IOS.
        В свою очередь наши преподаватели научат Вас всему, что необходимо для начинающих разработчиков.
        Преподавательский состав из действующих разработчиков, которые обучают реальным кейсам.
        Мы добьемся того чтобы Вы освоили все)
    </string>
    <string name="button_skip">Пропустить</string>

    <!--HelpFragment-->
    <string name="text_geek_help">GeekHelp</string>
    <string name="text_send">Отправить</string>

    <!--AddProblemFragment-->
    <string name="hint_title_question_or_problem">Заглавие вопроса/проблемы</string>
    <string name="hint_description_question_or_problem">Описание вопроса/проблемы</string>
    <string name="hint_from_whom">От кого</string>

    <!--ProblemFragment-->
    <string name="text_from">От:</string>
    <string name="button_help">Помочь</string>

    <!--EventsFragment-->
    <string name="text_geek_events">GeekEvents</string>

    <!--list_events_item-->
    <string name="contentDescription_image_event">Image event</string>

    <!--QRScannerFragment-->

    <!--InOfficeFragment-->
    <string name="hint_search_student">Поиск студента…</string>

    <!--ChatFragment-->
    <string name="hint_send_message">Отправить сообщение…</string>

    <!--ProfileFragment-->
    <string name="contentDescription_image_user_photo">Image user photo</string>
    <string name="contentDescription_image_name_tag">Image name tag</string>
    <string name="contentDescription_icon_verified">Icon verified</string>
    <string name="hint_username">Имя</string>
    <string name="contentDescription_image_level">Image level</string>
    <string name="hint_level">Уровень</string>
    <string name="contentDescription_image_github">Image GitHub</string>
    <string name="hint_github">GitHub</string>
    <string name="button_edit_profile">Редактировать</string>
    <string name="button_logout">Выйти</string>
    <string name="text_my_projects">Мои проекты:</string>

    <!--EditProfileFragment-->
    <string name="contentDescription_icon_add_a_photo">Icon add a photo</string>
    <string name="button_save">Сохранить</string>

    <!--list_projects_item-->
    <string name="contentDescription_icon_project">Icon project</string>

    <!--IntroFragment-->
    <string name="button_apply">Подать заявку</string>

    <!--SendARequestFragment-->
    <string name="contentDescription_icon_app">Icon GeekTech</string>
    <string name="hint_name">Имя</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="button_send">Отправить</string>

    <!--SignInFragment-->
    <string name="hint_enter_email_or_phone_number">Введите Email или Номер телефона</string>
    <string name="hint_enter_password">Введите Пароль</string>
    <string name="button_sign_in">Войти</string>
    <string name="button_sign_in_with">Войти с помощью</string>
    <string name="button_dont_have_account">Нет аккаунта? Зарегистрироваться</string>

    <!--SignUpFragment -->
    <string name="hint_email">Email</string>
    <string name="text_or">Или</string>
    <string name="hint_password">Пароль</string>
    <string name="button_sign_up">Зарегистрироваться</string>
    <string name="button_already_have_account">Уже есть акккаунт? Войти</string>


</resources>