<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.fragments.sendarequest.SendARequestFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/contentDescription_icon_app"
        android:src="@mipmap/ic_launcher_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_send_a_request_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeColor="@color/Navy"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:errorIconDrawable="@null"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edit_sendARequest_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_name"
            android:hint="@string/hint_name"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_send_a_request_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeColor="@color/Navy"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:errorIconDrawable="@null"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edit_sendARequest_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_phone_number"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_sendARequest_send"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/button_send"
        android:textColor="@color/Navy"
        app:cornerRadius="50dp"
        app:strokeColor="@color/Navy" />


</LinearLayout>