<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.home.help.addproblem.AddProblemFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_add_problem_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/icon_back"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_add_problem_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        android:layout_margin="20dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeColor="@color/defaultStroke"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:errorIconDrawable="@null"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edit_add_problem_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_title_question_or_problem"
            android:hint="@string/hint_title_question_or_problem"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_add_problem_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        android:layout_margin="20dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeColor="@color/defaultStroke"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:errorIconDrawable="@null"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edit_add_problem_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_description_question_or_problem"
            android:hint="@string/hint_description_question_or_problem"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_add_problem_from_whom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        android:layout_margin="20dp"

        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeColor="@color/defaultStroke"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:errorIconDrawable="@null"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edit_add_problem_from_whom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_from_whom"
            android:hint="@string/hint_from_whom"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_send"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/text_send"
        android:textColor="@color/defaultTextIcon"
        app:cornerRadius="50dp"
        app:strokeColor="@color/defaultStroke"
        app:strokeWidth="1dp" />


</LinearLayout>